dev/manifests/3rd-party/postgres/postgres-extra-ssvc.yml
---
# Source: xxxxx/templates/postgres-extra-ssvc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/name: postgresql
  name: postgres
  annotations:
    pia-team.com/role: pia.k8s.postgres/0.5.1
spec:
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/name: postgresql
  type: ClusterIP
